...
    let label: String
    let value: CGFloat
    let color: Color

    var body: some View {
        HStack {
            Image(systemName: "square.fill").foregroundColor(color)
            Text(label)
            Spacer()
            Text("\(value as NSNumber, formatter: Style.metricFormatter)")
                .font(Font.body.monospacedDigit())
        }.padding()
    }
...
                }
            }
            Section(header: Text("Metrics")) {
                FontMetricRowView(label: "Size:", value: font.wrappedValue.pointSize, color: .clear)
                FontMetricRowView(label: "Line Height:", value: font.wrappedValue.lineHeight, color: .clear)
                FontMetricRowView(label: "Ascender:", value: font.wrappedValue.ascender, color: .red)
                FontMetricRowView(label: "Descender:", value: font.wrappedValue.descender, color: .green)
                FontMetricRowView(label: "Cap Height:", value: font.wrappedValue.capHeight, color: .purple)
                FontMetricRowView(label: "x Height:", value: font.wrappedValue.xHeight, color: .blue)
            }
            Section(header: Text("Traits")) {
                Text(font.wrappedValue.traitsPresent)
            }
...
